@@ -497,7 +497,7 @@ IANA Considerations for RPC Net Identifiers and Universal Address Formats.
 
     <reference anchor="openg_chmod">
       <front>
-     <title>Section 'chmod()' of System Interfaces of The Open Group Base Specifications Issue 6, IEEE Std 1003.1, 2004 Edition
+     <title>Section 'chmod()' of System Interfaces of The Open Group Base Specifications Issue 6, IEEE Std 1003.1, 2004 Edition, ISBN 1931624232
      </title>
   <author>
     <organization>The Open Group
@@ -1303,7 +1303,7 @@ document are to be interpreted as described in RFC
 
     <reference anchor="openg_access">
       <front>
-     <title>The Open Group Base Specifications Issue 6, IEEE Std 1003.1, 2004 Edition
+     <title>The Open Group Base Specifications Issue 6, IEEE Std 1003.1, 2004 Edition, ISBN 1931624232
      </title>
   <author>
     <organization>The Open Group
@@ -1337,4 +1337,17 @@ document are to be interpreted as described in RFC
   </front>
   <seriesInfo name="Proceedings of the 4th Annual Linux Showcase and Conference" value="" />
 </reference>
+
+    <reference anchor="openg_tail">
+      <front>
+     <title>Section 'tail' of System Interfaces of The Open Group Base Specifications Issue 6, IEEE Std 1003.1, 2004 Edition, ISBN 1931624232
+     </title>
+  <author>
+    <organization>The Open Group
+    </organization>
+  </author>
+  <date year="2004" />
+      </front>
+    </reference>
+
   </references>
